# simple_python

./: CHANGELOG.md  CONTRIBUTING.md  README.md  changelog_template  ibis.py  pyproject.toml  release_note_template  release_notes.md  semantic.py
.github/workflows/: release.yml
release_templates/: changelog_template.j2  release_note_template.j2
src/: file_2.py  file_3.py  ibis.py  ibis.txt  main.py
templates/: .release_notes.md.j2  CHANGELOG.md.j2  release_notes.md.j2
