[tool.poetry]
name = "simple-python"
version = "0.3.0"
description = ""
authors = ["Ibis Prevedello <ibiscp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.python-semantic-release.dependencies]
python-semantic-release = "^8.7.0"

[tool.semantic_release]
version_variable = ["src/__init__.py:__version__"]
version_toml = ["pyproject.toml:tool.poetry.version"]
upload_to_pypi = false
upload_to_release = true
commit_subject_parser = "^((?!Merge).)*$"
commit_message = "chore(semver): Update version to {version}"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.qa]
match = "qa"
prerelease = true
prerelease_token = "rc"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
