[tool.poetry]
name = "simple-python"
version = "0.8.0"
description = ""
authors = ["Ibis Prevedello <ibiscp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
tag_format = "v{version}"
commit_parser = "angular"
commit_version_number = true
upload_to_pypi = false
upload_to_release = true
commit_message = "chore: Update version to {version}"
commit_author = "Jackie Diver <jackie@deepdivetech.ai>"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = ["^Merge.*"]

[tool.semantic_release.branches.qa]
match = "qa"
prerelease = true
prerelease_token = "rc"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
