[tool.poetry]
name = "simple-python"
version = "0.9.0-rc.4"
description = ""
authors = ["Ibis Prevedello <ibiscp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
tag_format = "v{version}"
commit_parser = "angular"
commit_version_number = true
upload_to_pypi = false
upload_to_release = true
commit_message = "build: Update version to {version}"
commit_author = "Jackie Diver <jackie@deepdivetech.ai>"
template_dir = "templates"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = ["^Merge.*"]

[tool.semantic_release.branches.qa]
match = "qa"
prerelease = true
prerelease_token = "rc"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
